# alpenglow-consensus

./: .gitignore  DELIVERABLES_CHECKLIST.md  FINAL_IMPROVEMENTS.md  GITHUB_SETUP_GUIDE.md  LICENSE  Makefile  README.md  REQUIREMENTS_COMPLIANCE.md  SUBMISSION_README.md  SUBMISSION_REPORT.md  SUBMISSION_STRUCTURE.md  TEST_RESULTS.md  Technical_Report.md  run_all_tests.py
docs/: architecture.md
proofs/: liveness.md
rust-implementation/: Cargo.toml
rust-implementation/examples/: quick_demo.rs  simple_demo.rs  voting_demo.rs
rust-implementation/src/: consensus.rs  lib.rs  rotor.rs  types.rs  votor.rs
rust-implementation/tests/: stateright_model.rs
tla-spec/: Alpenglow.cfg  Alpenglow.tla  AlpenglowEnhanced.cfg  AlpenglowEnhanced.tla  simulate_tlc.py  statistical_mc.py  temporal_verifier.py  temporal_verifier_bounded.py  timing_analysis.py
