[package]
name = "alpenglow-consensus"
version = "0.1.0"
edition = "2021"
authors = ["Alpenglow Team"]
description = "Formally verified implementation of Alpenglow consensus for Solana"
license = "Apache-2.0"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
bincode = "1.3"
sha2 = "0.10"
ed25519-dalek = "2.1"
rand = "0.8"

[dev-dependencies]

[lib]
name = "alpenglow"
path = "src/lib.rs"

[[example]]
name = "simple_demo"
path = "examples/simple_demo.rs"

[[example]]
name = "voting_demo"
path = "examples/voting_demo.rs"

[[example]]
name = "quick_demo"
path = "examples/quick_demo.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1